--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,23 @@
 .input{
   width: 45%;
   border: 1px solid white;
+  
 }
 .selectInput{
   width: 94%;
+  
 }
 .dateInput{
   width:94%;
+  
 }
 .fileInput{
   width:94%;
+
+}
+
+.btn-color{
+
+  color: #fc3d09;
 
 }
